# source2toolkit-sdk

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  protobuf.cmake
public/source2toolkit/: IToolkitAddresses.h  IToolkitApi.h  IToolkitCommands.h  IToolkitConVars.h  IToolkitEntities.h  IToolkitEntityIO.h  IToolkitEvents.h  IToolkitGameConfig.h  IToolkitMenus.h  IToolkitMySQL.h  IToolkitPlugin.h  IToolkitScheduler.h  IToolkitTrace.h  IToolkitTypes.h
public/source2toolkit/schema/: attackerinfo.h  clientframe.h  entities.h  entity.cpp  entity.h  entityio.h  netmessages.h  schema.h  serversideclient.h  takedamageinfo.h  takedamageresult.h
public/source2toolkit/schema/entity/classes/: AnimGraph2SerializedPoseRecipeSlot_t.h  AutoRoomDoorwayPairs_t.h  CAI_ChangeHintGroup.h  CAI_Expresser.h  CAI_ExpresserWithFollowup.h  CAK47.h  CAmbientGeneric.h  CAnimGraphControllerBase.h  CAnimGraphControllerManager.h  CAnimGraphNetworkedVariables.h  CAttributeContainer.h  CAttributeList.h  CAttributeManager.h  CAttributeManager__cached_attribute_float_t.h  CBarnLight.h  CBaseAnimGraph.h  CBaseAnimGraphController.h  CBaseAnimGraphDestructibleParts_GraphController.h  CBaseButton.h  CBaseCSGrenade.h  CBaseCSGrenadeProjectile.h  CBaseClientUIEntity.h  CBaseCombatCharacter.h  CBaseDMStart.h  CBaseDoor.h  CBaseEntity.cpp  CBaseEntity.h  CBaseFilter.h  CBaseFlex.h  CBaseFlexAlias_funCBaseFlex.h  CBaseGrenade.h  CBaseIssue.h  CBaseModelEntity.cpp  CBaseModelEntity.h  CBaseModelEntity__OnDamageLevelChangedArgs_t.h  CBaseMoveBehavior.h  CBasePlatTrain.h  CBasePlayerController.cpp  CBasePlayerController.h  CBasePlayerPawn.cpp  (+698 more)
public/source2toolkit/schema/entity/enums/: AggregateInstanceStream_t.h  AimMatrixBlendMode.h  AmmoFlags_t.h  AmmoPosition_t.h  AnimGraphDebugDrawType_t.h  AnimLoopMode_t.h  AnimNodeNetworkMode.h  AnimParamButton_t.h  AnimParamNetworkSetting.h  AnimParamType_t.h  AnimParamVectorType_t.h  AnimScriptType.h  AnimValueSource.h  AnimVectorSource.h  AnimationAlgorithm_t.h  AnimationProcessingType_t.h  AnimationSnapshotType_t.h  AnimationType_t.h  BBoxVolumeType_t.h  BaseExplosionTypes_t.h  BeamClipStyle_t.h  BeamType_t.h  BeginDeathLifeStateTransition_t.h  BinaryNodeChildOption.h  BinaryNodeTiming.h  Blend2DMode.h  BlendKeyType.h  BloodType.h  BloomBlendMode_t.h  BlurFilterType_t.h  BodySectionAuthority_t.h  BoneMaskBlendSpace.h  BoneTransformSpace_t.h  BreakableContentsType_t.h  BrushSolidities_e.h  C4LightEffect_t.h  CAnimationGraphVisualizerPrimitiveType.h  CCSPlayerAnimationState__AirAction_t.h  CCSPlayerAnimationState__Direction_t.h  CCSPlayerAnimationState__GroundMoveState_t.h  (+443 more)
public/source2toolkit/utils/: addresses.h  commands.h  convars.h  events.h  gameconfig.h  menus.h  mysql.h  plat.h  raytrace.h  scheduler.h  trace.h  virtual.h
src/schema/: cgameresourceserviceserver.h  commands.cpp  entities.cpp  entity.cpp  entity.h  entityio.h  events.cpp  gameconfig.cpp  netchannel.h  raytrace.cpp  scheduler.cpp  schema.cpp  schema.h  takedamageinfo.cpp  takedamageresult.cpp
src/schema/entity/classes/: CBaseEntity.cpp  CBaseModelEntity.cpp  CBasePlayerController.cpp  CBasePlayerPawn.cpp  CBasePlayerWeapon.cpp  CCSGameRules.cpp  CCSPlayerController.cpp  CCSPlayerPawn.cpp  CCSPlayer_ItemServices.cpp  CCSPlayer_WeaponServices.cpp  CPlayerControllerComponent.cpp  CPlayerPawnComponent.cpp  CTakeDamageInfo.cpp
src/utils/: addresses.cpp  commands.cpp  convars.cpp  events.cpp  gameconfig.cpp  menus.cpp  mysql.cpp  plat_unix.cpp  plat_win.cpp  raytrace.cpp  scheduler.cpp  trace.cpp
tools/docsgen/: cpp_parser.py  generator.py  schema_generator.py
tools/schemagen/: CustomMethods.cs  NetworkClasses.cs  NewSchemaModule.cs  Program.cs  SchemaAtomicCategory.cs  SchemaClass.cs  SchemaEnum.cs  SchemaEnumItem.cs  SchemaField.cs  SchemaFieldType.cs  SchemaModule.cs  SchemaTypeCategory.cs  Source2Toolkit.SchemaGen.csproj  generator.py
